// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addAddress 1`] = `"Read Only Mode"`;

exports[`addAddress 2`] = `
Array [
  Array [
    "addr1",
    "addr2",
    1,
  ],
]
`;

exports[`addCustodian 1`] = `"Read Only Mode"`;

exports[`addCustodian 2`] = `
Array [
  Array [
    "custodianAddr",
  ],
]
`;

exports[`addOtherContracts 1`] = `"Read Only Mode"`;

exports[`addOtherContracts 2`] = `
Array [
  Array [
    "otherContractAddr",
  ],
]
`;

exports[`getStates 1`] = `
Object {
  "isStarted": true,
  "lastOperationTime": 100000,
  "operationCoolDown": 100000,
  "poolSizes": Object {
    "cold": 3,
    "custodian": 3,
    "hot": 3,
    "otherContract": 3,
  },
  "votingStage": "Moderator",
}
`;

exports[`removeAddress 1`] = `"Read Only Mode"`;

exports[`removeAddress 2`] = `
Array [
  Array [
    "addr",
    1,
  ],
]
`;

exports[`startContractVoting 1`] = `"Read Only Mode"`;

exports[`startContractVoting 2`] = `
Array [
  Array [
    "candidateAdddr",
  ],
]
`;

exports[`startManager 1`] = `"Read Only Mode"`;

exports[`startModeratorVoting 1`] = `"Read Only Mode"`;

exports[`terminateByTimeout 1`] = `"Read Only Mode"`;

exports[`terminateContractVoting 1`] = `"Read Only Mode"`;

exports[`vote 1`] = `"Read Only Mode"`;

exports[`vote 2`] = `
Array [
  Array [
    true,
  ],
  Array [
    true,
  ],
]
`;
